@@ -578,13 +578,13 @@ test-core: setup $(TCLTEST) dlls $(CAT32)
 	set TCL_LIBRARY=$(ROOT:\=/)/library
 !if "$(OS)" == "Windows_NT"  || "$(MSVCDIR)" == "IDE"
 	$(DEBUGGER) $(TCLTEST) "$(ROOT:\=/)/tests/all.tcl" $(TESTFLAGS) -loadfile <<
-		package ifneeded dde 1.4.0b2 [list load "$(TCLDDELIB:\=/)" dde]
+		package ifneeded dde 1.4.0 [list load "$(TCLDDELIB:\=/)" dde]
 		package ifneeded registry 1.3.0 [list load "$(TCLREGLIB:\=/)" registry]
 <<
 !else
 	@echo Please wait while the tests are collected...
 	$(TCLTEST) "$(ROOT:\=/)/tests/all.tcl" $(TESTFLAGS) -loadfile << > tests.log
-		package ifneeded dde 1.4.0b2 "$(TCLDDELIB:\=/)" dde]
+		package ifneeded dde 1.4.0 "$(TCLDDELIB:\=/)" dde]
 		package ifneeded registry 1.3.0 "$(TCLREGLIB:\=/)" registry]
 <<
 	type tests.log | more
